test/syntax/fail/redeclaration_of_type.sync
type x = int
type x = int

let node f () = true
